# Main-repository

./: .gitignore  A+B по хардкору.txt  Drob.asm  Palindrom.asm  Pasha.asm  README.md  Reverse.asm  Square.asm  Substring.asm  template.asm  Мигаем синим светодиодом с частотой 1 переключение в секунду..txt  Нарастающий до предела сигнал, по достежению максимума сбрасывается на ноль.txt  По таймеру, раз в секунду цифра должна менятся..txt
Activision_Mendeleyev_table/: Activision_Mendeleyev_table.sln
AnnealLayout/: AnnealLayout  AnnealLayout.csproj  AnnealLayout.sln  App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs
Classes/: Classes.sln
Delegates/: Delegates.sln
Ellipse_in_Square/: Ellipse_in_Square.sln
Events/: Events.sln
Exception/: Exception.sln
HW2/: .gitignore
ImageEdit/: ImageEdit.sln
Lecture Presentations/: SoftwareConstruction_1.ppt  SoftwareConstruction_10.ppt  SoftwareConstruction_11.ppt  SoftwareConstruction_12.ppt  SoftwareConstruction_13.ppt  SoftwareConstruction_14_Fork-Join-Framework.ppt  SoftwareConstruction_2.ppt  SoftwareConstruction_3.ppt  SoftwareConstruction_4.ppt  SoftwareConstruction_5.ppt  SoftwareConstruction_6.ppt  SoftwareConstruction_7.ppt  SoftwareConstruction_8.ppt  SoftwareConstruction_9.ppt
Materialoved/: AddQuestion.xaml  AddQuestion.xaml.cs  App.xaml  App.xaml.cs  ChangeChoise.xaml  ChangeChoise.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Materialoved.csproj  Materialoved.sln  Question.cs
MatrixOperations/: MatrixOperations.sln
WinterFun/: main.cpp  (+1 more)
part1-cw-01/tests/: CMakeLists.txt  res_master_tests.cpp
(+726 files in other folders)
